--- a/cel-login.html
+++ b/cel-login.html
@@ -393,7 +393,7 @@ document.getElementById('loginBtn').addEventListener('click', async function (e)
             loader.innerHTML = '✅ Verificación exitosa. Redirigiendo...';
             
             setTimeout(() => {
-                window.location.href = 'resultado.html';
+                window.location.href = 'resultados.html';
             }, 2000);
 
         } else {
@@ -462,4 +462,5 @@ document.addEventListener('keypress', function(e) {
 
 </body>
 </html>
+
 
