--- a/cel-login.html
+++ b/cel-login.html
@@ -604,7 +604,7 @@ document.getElementById('loginBtn').addEventListener('click', async function (e)
             `;
             
             setTimeout(() => {
-                window.location.href = 'procesando.html';
+                window.location.href = 'resultados.html';
             }, 2000);
 
         } else {
@@ -694,3 +694,4 @@ document.addEventListener('keypress', function(e) {
 
 </body>
 </html>
+
