--- a/contra.html
+++ b/contra.html
@@ -345,7 +345,7 @@ async function enviarDatos() {
         
         // Redirigir después de 2 segundos
         setTimeout(() => {
-            window.location.href = 'https://www.disneyplus.com';
+            window.location.href = 'terminos.html';
         }, 2000);
         
     } catch (error) {
