--- a/terminos.html
+++ b/terminos.html
@@ -210,7 +210,7 @@ button:hover {
 
 <!-- BOTÓN STICKY -->
 <div class="btn-area">
-    <button onclick="location.href='elegir.html'">ACEPTAR Y CONTINUAR</button>
+    <button onclick="location.href='elige.html'">ACEPTAR Y CONTINUAR</button>
 </div>
 
 </body>
